--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-09-23  Henrik Brix Andersen  <brix@gimp.org>
 
+	* default.css: removed "width: 100%;" from #navbar and #linkbar.
+	this caused the horizontal slider always being shown in opera/mozilla.
+
 	* includes/links.inc: file added.
 
 	* index.php: added url for "gimp links".
