--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,88 @@
+2002-09-24  Henrik Brix Andersen  <brix@gimp.org>
+
+	* tutorials/Anti-Aliased_Treshold/index.html:
+	hack: now the x-bit should be set
+
+	* tutorials/Anti-Aliased_Treshold/index.html:
+	hack: I forgot to set the execution bit at file check in
+
+	* includes/tutnavbar.inc, tutorials/Anti-Aliased_Treshold/index.html:
+	minor bug fix to new tutorial layout
+
+	* tutorials/Anti-Aliased_Treshold/index.html: made file executeable
+
+	* includes/footer.inc, includes/linkbar.inc, includes/menu.inc:
+	changed from relative to absolute urls where appropiate
+
+	* includes/header.inc, tutorials.html, tutorials/Anti-Aliased_Treshold/index.html:
+	added the first tutorial
+
+	* tutorials/Anti-Aliased_Treshold/index.html, tutorials/Anti-Aliased_Treshold/index.inc:
+	renamed index.inc to index.html
+
+	* links.html: added fake content to provide a template for Martijn
+
+	* os2.html: update files to use the new subpage layout
+
+	* includes/linkbar.inc:
+	replaced css content (|) with static html embedded content (|)
+
+	* authoring.html, development.html, documentation.html, includes/news.inc, links.html, macintosh.html, registry.html, style/default.css, team.html, template.html, tutorials.html, unix.html, windows.html:
+	files modified to use the new subpage layout
+
+	* about.html: changed about.html to use the new subpage layout
+
+	* style/default.css: made paragraphs double justified
+
+	* resources.html: added a link-in-text test
+
+	* resources.html, style/default.css:
+	testing the new subpage layout on resources.html
+
+	* includes/header.inc:
+	added a link to www.gimp.org from the top left logo
+
+	* about.html, includes/news.inc, style/default.css:
+	changed layout of subpages
+
+2002-09-24  Carol Spears  <carol@gimp.org>
+
+	* about.html: made the changes suggested by bbc on this bug report:
+	http://bugzilla.gnome.org/show_bug.cgi?id=94028
+
+2002-09-23  Henrik Brix Andersen  <brix@gimp.org>
+
+	* about.html: made comments xhtml1.0 compliant
+
+	* ChangeLog: updated the changelog from cvs log entries
+
+	* includes/documentation.inc:
+	forgot to remove includes/documentation.inc
+
+	* about.html, authoring.html, development.html, documentation.html, includes/about.inc, includes/authoring.inc, includes/blank.inc, includes/development.inc, includes/footer.inc, includes/header.inc, includes/linkbar.inc, includes/links.inc, includes/macintosh.inc, includes/menu.inc, includes/news.inc, includes/os2.inc, includes/registry.inc, includes/resources.inc, includes/team.inc, includes/tutorials.inc, includes/unix.inc, includes/windows.inc, index.html, index.php, links.html, macintosh.html, os2.html, registry.html, resources.html, team.html, template.html, tutorials.html, unix.html, windows.html:
+	moved from using php to using ssi (yosh insisted ;)
+
+	* style/default.css: added #navbar to the @media print rule
+
+	* tutorials/Anti-Aliased_Treshold/index.inc:
+	updated paragraphs to use the new p.tutorial rule
+
+	* style/default.css:
+	added a special (p.tutorial) paragraph to be used in tutorials
+
+	* ChangeLog: updated changelog
+
+	* style/default.css: removed "width: 100%;" from #navbar and #linkbar.
+	this caused the horizontal slider always being shown in opera/mozilla.
+
+	* ChangeLog: updated changelog.
+	changed my e-mail addy.
+
+	* includes/links.inc: file added.
+
+	* index.php: added url for "gimp links".
+	added case "links" to switch statement.
+
 2002-09-23  Henrik Brix Andersen  <brix@gimp.org>
 
 	* includes/documentation.inc:
