--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2002-09-25  carol  <carol@fungus>
+2002-09-25  Carol Spears  <carol@gimp.org>
 
 	* about.html:
 	added a more to the end of the introduction blurb to indicate that there is more
