--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,79 @@
+2002-09-27  Carol Spears <carol@gimp.org>
+
+	* unix/howtos/cvs-stable.html: put bex name on it
+
+	* unix.html:
+	hopefully i fixed the extra bullet in "The GIMP's Documentation" section
+
+	* unix.html:
+	put url in the proper place this time. i will sleep before i do more.
+
+	* unix.html: put the navigation back on
+
+	* unix.html: added a url to the recently upload gimp-help directory
+
+	* unix.html: i fixed the stuff at the top that i missed the first time.
+
+	* team.html: spelled yosh's real name wrong :)
+
+	* unix/howtos/cvs-stable.html, unix/howtos/cvsrc:
+	the cvs portion of bex's howto.  need to edit the second half and put it on
+	the page.
+
+2002-09-27  yosh  <yosh@fungus>
+
+	* install.exclude, install.sh: installation scripts
+
+2002-09-27  Carol Spears  <carol@gimp.org>
+
+	* team.html:
+	added Guest Lecturer to the team.  awaiting new names in the ChangeLog to make
+	the team list bigger and more wuvvy.  :)
+
+	* unix.html, unix/gimprc, unix/gimprc.html, unix/gtkrc, unix/gtkrc.html, unix/man-gimp-1.2.html, unix/man-gimp-remote-1.2.html, unix/man-gimprc.1.html, unix/man-gimptool-1.2.html:
+	i added the unix directory.  i copied the gimprc and the gtkrc from my
+	/usr/local/etc/gimp/1.2/.  i made some unformatted html for them.  i don't
+	know if this will fly or not. might be nice to have an rc style for these
+	things.  i decided to have different rc files for the different oses so
+	that we have the option to add extra comments to each if necessary.
+
+	i used man2html to convert the various gimp manpages to html.
+
+	i modified unix.html to see these.
+
+2002-09-26  branko  <branko@fungus>
+
+	* windows.html: first sketch
+
+2002-09-26  Henrik Brix Andersen  <brix@gimp.org>
+
+	* ChangeLog: changelog updated
+
+	* tutorials.html: oops. renamed the link
+
+	* tutorials/The_Basics/tut-basic-3.gif, tutorials/The_Basics/tut-basic-4.gif, tutorials/The_Basics/tut-basic-5.gif, tutorials/The_Basics/tut-basic-6.gif, tutorials/The_Basics/tut-basic-7.gif, tutorials/The_Basics/tut-basic-dia-1.gif, tutorials/The_Basics/tut-basic-dia-2.gif, tutorials/The_Basics/tut-basic-dia-3.gif, tutorials/The_Basics/tut-basic-dia-4.gif, tutorials/The_Basics/tut-basic-dia-5.gif, tutorials/The_Basics/tut-basic-dia-6.gif, tutorials/The_Basics/tut-basic-dia-7.gif, tutorials/The_Basics/tut-basic-dia-8.gif, tutorials/The_Basics/tut-basic-dia-9.gif, tutorials.html, tutorials/The_Basics/index.html, tutorials/The_Basics/tut-basic-1.gif, tutorials/The_Basics/tut-basic-2.gif:
+	ported the basics tutorial from current wgo to new layout
+
+	* tutorials/template/index.html: added a tutorial template
+
+	* tutorials/Anti-Aliased_Treshold/index.html:
+	fixed the placement of the authors copyright msg
+
+	* tutorials/Anti-Aliased_Treshold/index.html, style/default.css:
+	changed to use a p.images instead of div.images to inherit the margins from p
+
+	* ChangeLog: changelog updated
+
+	* template.html: updated the template to use the new header files
+
+	* includes/header.inc: removed old header file
+
+	* tutorials/Anti-Aliased_Treshold/index.html, includes/header_pretitle.inc, includes/header_posttitle.inc, about/screenshots.html, about/mediakit.html, about/introduction.html, about/history.html, about/awards.html, windows.html, unix.html, tutorials.html, team.html, resources.html, registry.html, os2.html, macintosh.html, links.html, index.html, documentation.html, development.html, authoring.html, about.html:
+	files modified to use the new headers.
+	this allows the title to be set from subpages, as requested by carol
+
+	* ChangeLog: changelog updated
+
 2002-09-26  Henrik Brix Andersen  <brix@gimp.org>
 
 	* tutorials.html: oops. renamed the link
