--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-09-29  Henrik Brix Andersen  <brix@gimp.org>
 
+	* README.repository: added a note about file permissions
+
+	* README.repository: fixed typo
+
+	* ChangeLog: changelog updated
+
 	* README.repository: file added. READ IT! Please... ;)
 
 	* install.exclude: added README.repository to list of excluded files
@@ -19,19 +25,6 @@
 	take a look in either lynx or links; you'll see.
 
 	* ChangeLog: changelog updated
-
-2002-09-29  Henrik Brix Andersen  <brix@gimp.org>
-
-	* includes/header_posttitle.inc: reverted brankos changes.
-	the image is not supposed to have an alt text.
-	alt texts are primarily used in text-only browsers, and they need not see our logo.
-	take a look in either lynx or links; you'll see.
-
-	* ChangeLog: changelog updated
-
-2002-09-28  branko  <branko@fungus>
-
-	* windows/download.html: typo
 
 2002-09-28  branko  <branko@fungus>
 
@@ -109,53 +102,6 @@
 
 	* windows.html: first sketch
 
-2002-09-27  Carol Spears <carol@gimp.org>
-
-	* unix/howtos/cvs-stable.html: put bex name on it
-
-	* unix.html:
-	hopefully i fixed the extra bullet in "The GIMP's Documentation" section
-
-	* unix.html:
-	put url in the proper place this time. i will sleep before i do more.
-
-	* unix.html: put the navigation back on
-
-	* unix.html: added a url to the recently upload gimp-help directory
-
-	* unix.html: i fixed the stuff at the top that i missed the first time.
-
-	* team.html: spelled yosh's real name wrong :)
-
-	* unix/howtos/cvs-stable.html, unix/howtos/cvsrc:
-	the cvs portion of bex's howto.  need to edit the second half and put it on
-	the page.
-
-2002-09-27  yosh  <yosh@fungus>
-
-	* install.exclude, install.sh: installation scripts
-
-2002-09-27  Carol Spears  <carol@gimp.org>
-
-	* team.html:
-	added Guest Lecturer to the team.  awaiting new names in the ChangeLog to make
-	the team list bigger and more wuvvy.  :)
-
-	* unix.html, unix/gimprc, unix/gimprc.html, unix/gtkrc, unix/gtkrc.html, unix/man-gimp-1.2.html, unix/man-gimp-remote-1.2.html, unix/man-gimprc.1.html, unix/man-gimptool-1.2.html:
-	i added the unix directory.  i copied the gimprc and the gtkrc from my
-	/usr/local/etc/gimp/1.2/.  i made some unformatted html for them.  i don't
-	know if this will fly or not. might be nice to have an rc style for these
-	things.  i decided to have different rc files for the different oses so
-	that we have the option to add extra comments to each if necessary.
-
-	i used man2html to convert the various gimp manpages to html.
-
-	i modified unix.html to see these.
-
-2002-09-26  branko  <branko@fungus>
-
-	* windows.html: first sketch
-
 2002-09-26  Henrik Brix Andersen  <brix@gimp.org>
 
 	* ChangeLog: changelog updated
@@ -185,46 +131,7 @@
 
 	* ChangeLog: changelog updated
 
-2002-09-26  Henrik Brix Andersen  <brix@gimp.org>
-
-	* tutorials.html: oops. renamed the link
-
-	* tutorials/The_Basics/tut-basic-3.gif, tutorials/The_Basics/tut-basic-4.gif, tutorials/The_Basics/tut-basic-5.gif, tutorials/The_Basics/tut-basic-6.gif, tutorials/The_Basics/tut-basic-7.gif, tutorials/The_Basics/tut-basic-dia-1.gif, tutorials/The_Basics/tut-basic-dia-2.gif, tutorials/The_Basics/tut-basic-dia-3.gif, tutorials/The_Basics/tut-basic-dia-4.gif, tutorials/The_Basics/tut-basic-dia-5.gif, tutorials/The_Basics/tut-basic-dia-6.gif, tutorials/The_Basics/tut-basic-dia-7.gif, tutorials/The_Basics/tut-basic-dia-8.gif, tutorials/The_Basics/tut-basic-dia-9.gif, tutorials.html, tutorials/The_Basics/index.html, tutorials/The_Basics/tut-basic-1.gif, tutorials/The_Basics/tut-basic-2.gif:
-	ported the basics tutorial from current wgo to new layout
-
-	* tutorials/template/index.html: added a tutorial template
-
-	* tutorials/Anti-Aliased_Treshold/index.html:
-	fixed the placement of the authors copyright msg
-
-	* tutorials/Anti-Aliased_Treshold/index.html, style/default.css:
-	changed to use a p.images instead of div.images to inherit the margins from p
-
-	* ChangeLog: changelog updated
-
-	* template.html: updated the template to use the new header files
-
-	* includes/header.inc: removed old header file
-
-	* tutorials/Anti-Aliased_Treshold/index.html, includes/header_pretitle.inc, includes/header_posttitle.inc, about/screenshots.html, about/mediakit.html, about/introduction.html, about/history.html, about/awards.html, windows.html, unix.html, tutorials.html, team.html, resources.html, registry.html, os2.html, macintosh.html, links.html, index.html, documentation.html, development.html, authoring.html, about.html:
-	files modified to use the new headers.
-	this allows the title to be set from subpages, as requested by carol
-
-	* ChangeLog: changelog updated
-
-2002-09-26  Henrik Brix Andersen  <brix@gimp.org>
-
-	* template.html: updated the template to use the new header files
-
-	* includes/header.inc: removed old header file
-
-	* tutorials/Anti-Aliased_Treshold/index.html, includes/header_pretitle.inc, includes/header_posttitle.inc, about/screenshots.html, about/mediakit.html, about/introduction.html, about/history.html, about/awards.html, windows.html, unix.html, tutorials.html, team.html, resources.html, registry.html, os2.html, macintosh.html, links.html, index.html, documentation.html, development.html, authoring.html, about.html:
-	files modified to use the new headers.
-	this allows the title to be set from subpages, as requested by carol
-
-	* ChangeLog: changelog updated
-
-2002-09-25  Carol Spears  <carol@gimp.org>
+2002-09-25  carol  <carol@fungus>
 
 	* about.html: some missing </li>'s
 
@@ -238,18 +145,7 @@
 
 	* ChangeLog: changelog updated
 
-2002-09-25  Carol Spears  <carol@gimp.org>
-
-	* about.html:
-	added a more to the end of the introduction blurb to indicate that there is more
-	elsewhere.
-
-	* about/awards.html, about/history.html, about/introduction.html, about/mediakit.html, about/screenshots.html:
-	put these templates in place :)
-
-	* about.html: ported about.html to the layout plans
-
-2002-09-25  Carol Spears  <carol@gimp.org>
+2002-09-25  carol  <carol@fungus>
 
 	* about.html:
 	added a more to the end of the introduction blurb to indicate that there is more
@@ -309,7 +205,7 @@
 	* about.html, includes/news.inc, style/default.css:
 	changed layout of subpages
 
-2002-09-24  Carol Spears  <carol@gimp.org>
+2002-09-24  carol  <carol@fungus>
 
 	* about.html: made the changes suggested by bbc on this bug report:
 	http://bugzilla.gnome.org/show_bug.cgi?id=94028
@@ -330,32 +226,6 @@
 
 	* tutorials/Anti-Aliased_Treshold/index.inc:
 	updated paragraphs to use the new p.tutorial rule
-
-	* style/default.css:
-	added a special (p.tutorial) paragraph to be used in tutorials
-
-	* ChangeLog: updated changelog
-
-	* style/default.css: removed "width: 100%;" from #navbar and #linkbar.
-	this caused the horizontal slider always being shown in opera/mozilla.
-
-	* ChangeLog: updated changelog.
-	changed my e-mail addy.
-
-	* includes/links.inc: file added.
-
-	* index.php: added url for "gimp links".
-	added case "links" to switch statement.
-
-2002-09-23  Henrik Brix Andersen  <brix@gimp.org>
-
-	* includes/documentation.inc:
-	forgot to remove includes/documentation.inc
-
-	* about.html, authoring.html, development.html, documentation.html, includes/about.inc, includes/authoring.inc, includes/blank.inc, includes/development.inc, includes/footer.inc, includes/header.inc, includes/linkbar.inc, includes/links.inc, includes/macintosh.inc, includes/menu.inc, includes/news.inc, includes/os2.inc, includes/registry.inc, includes/resources.inc, includes/team.inc, includes/tutorials.inc, includes/unix.inc, includes/windows.inc, index.html, index.php, links.html, macintosh.html, os2.html, registry.html, resources.html, team.html, template.html, tutorials.html, unix.html, windows.html:
-	moved from using php to using ssi (yosh insisted ;)
-
-	* style/default.css: added #navbar to the @media print rule
 
 	* style/default.css:
 	added a special (p.tutorial) paragraph to be used in tutorials
@@ -411,7 +281,7 @@
 
 	* index.php: added "webteam" case to switch statement
 
-2002-09-22  Carol Spears  <carol@gimp.org>
+2002-09-22  carol  <carol@fungus>
 
 	* ChangeLog, includes/webteam.inc, index.php:
 	2002-09-21  Carol Spears  <carol@gimp.org>
@@ -431,7 +301,8 @@
 
 2002-09-21  Henrik Brix Andersen  <brix@gimp.org>
 
-	* includes/tutorials.inc: moved tutorials to /tutorials
+	* includes/tutorials.inc, tutorials/Anti-Aliased_Treshold/curves.jpg, tutorials/Anti-Aliased_Treshold/effect.jpg, tutorials/Anti-Aliased_Treshold/finished.jpg, tutorials/Anti-Aliased_Treshold/index.inc, tutorials/Anti-Aliased_Treshold/original.jpg, tutorials/Anti-Aliased_Treshold/threshold.jpg:
+	moved tutorials to /tutorials
 
 	* includes/tutorials.inc:
 	do not list the CVS directory as a tutorial ;)
@@ -521,7 +392,7 @@
 
 	* style/default.css, index.php: fixed display of several news items
 
-2002-09-20  Carol Spears  <carol@gimp.org>
+2002-09-20  carol  <carol@fungus>
 
 	* index.php:
 	removed the rest of the spaces in the top bar <div></div>
