Added the Quickmask tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	authors
 	
 2002-10-06  scizzo <scizzo@se.debian.net>
+	
+	* tutorials/Quickmask/: Added the Quickmask tutorial.
 
 	* tutorials/index.html: Changed the Bezier_Curves to Bezier_Selections.
 
