Modified Changelog. Added the Custom Brushes tutorial.
Modified Changelog.
Added the Custom Brushes tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	
 2002-10-06  scizzo <scizzo@se.debian.net>
 
+	* tutorials/Custom_Brushes: Added the Custom Brushes tutorial.
+
 	* tutorials/Red_Eye_Removal: Added the Red Eye tutorial.
 	
 	* tutorials/Quickmask/: Added the Quickmask tutorial.
