Fixed the index a bit more.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-10-07  scizzo <scizzo@gimp.org>
 
 	* tutorials/Film_Grain: Added the Film Grain tutorial.
+	Fixed the index a bit more.
 	
 	* Changelog: Added the scizzo@gimp.org address instead.
 	
