Modified Changelog. Added the first Changing Background Color tutorial. "A
Modified Changelog.
Added the first Changing Background Color tutorial. "A little rude though".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-10-07  scizzo <scizzo@gimp.org>
 
+	* tutorials/Changing_Background_Color_1/: Added the first
+	Changing Background Color tutorial. "A little rude though".
+
 	* tutorials/Film_Grain: Added the Film Grain tutorial.
 	Fixed the index a bit more.
 	
