Did the last of the tutorial. It is however pretty rude.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-08  scizzo <scizzo@gimp.org>
+
+	* tutorials/3d_Logo/: Did the last of the tutorial.
+	It is however pretty rude.
+
 2002-10-07  scizzo <scizzo@gimp.org>
 
 	* tutorials/3d_Logo/: Started the work on the 3D logo
