Modified Changelog. Added the Tileable_Textures tutorial.
Modified Changelog.
Added the Tileable_Textures tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-10-08  scizzo <scizzo@gimp.org>
 
+	* tutorials/Tileable_Textures/: Added the Tileable_Textures
+	tutorial.
+
 	* tutorials/3d_Logo/: Did the last of the tutorial.
 	It is however pretty rude.
 
