Modified Changelog. Started to work on the tutorial Image Pipes.
Modified Changelog.
Started to work on the tutorial Image Pipes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-09  scizzo <scizzo@gimp.org>
+
+	* tutorials/Image_Pipes/: Started to work on the tutorial Image Pipes.
+
 2002-10-08  scizzo <scizzo@gimp.org>
 
 	* tutorials/Tileable_Textures/: Added the Tileable_Textures
