--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-11 brix <brix@gimp.org>
+
+	* style/default.css: separated #main rule into td#main and
+	div#main rules, removing the width from div#main. this fixed the
+	tutorial width problem in mozilla.
+
 2002-10-10 brix <brix@gimp.org>
 	
 	* includes/tutnavbar.inc: changed the href to work with the (new)
