Modified Changelog. More fixes to test the screenshots.
Modified Changelog.
More fixes to test the screenshots.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-10-11 scizzo <scizzo@gimp.org>
 
 	* tutorials/Straight_Line: Test of new class and screenshots.
+	More fixes to test the screenshots.
 
 2002-10-11 brix <brix@gimp.org>
 
