--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-13 carol <carol@gimp.org>
+
+	* added brush images to resources/brushes/index.html and put them 
+    into a list.  included the script that was used to generate them.
+
 2002-10-11 scizzo <scizzo@gimp.org>
 
 	* tutorials/Straight_Line: Test of new class and screenshots.
