--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-10-13 carol <carol@gimp.org>
 
+	* added line breaks in the html in resouces/brushes/index.html
+
+2002-10-13 carol <carol@gimp.org>
+
 	* added brush images to resources/brushes/index.html and put them 
     into a list.  included the script that was used to generate them.
 
