--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-13 scizzo <scizzo@gimp.org>
+
+	* tutorials/3d_Logo/index.html: Changed the steps in the tutorial.
+
 2002-10-13 carol <carol@gimp.org>
 
 	* added line breaks in the html in resouces/brushes/index.html
