Modified Changelog. Did the last porting to the tutorial.
Modified Changelog.
Did the last porting to the tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-15 scizzo <scizzo@gimp.org>
+
+	* tutorials/Image_Pipes/: Did the last porting to the tutorial.
+	
 2002-10-13 scizzo <scizzo@gimp.org>
 
 	* tutorials/3d_Logo/index.html: Changed the steps in the tutorial.
