--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-10-15 scizzo <scizzo@gimp.org>
 
 	* tutorials/Image_Pipes/: Did the last porting to the tutorial.
+	Forgot to add the jpg images.
 	
 2002-10-13 scizzo <scizzo@gimp.org>
 
