Modified Changelog. Nothing changed in README.tutorials. Trying to make
Modified Changelog.
Nothing changed in README.tutorials.
Trying to make the tutorial better.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* tutorials/Image_Pipes/: Did the last porting to the tutorial.
 	Forgot to add the jpg images.
+
+	* tutorials/Straight_Line/: Trying to make the tutorial better.
 	
 2002-10-13 scizzo <scizzo@gimp.org>
 
