Modified Changelog. Done with the tutorial porting.
Modified Changelog.
Done with the tutorial porting.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* tutorials/Golden_Text/: Add the first version of the Golden_Text tutorial.
 
 	* tutorials/Draw_A_Paint_Brush/: Did the first 9 steps in the
-	tutorial.
+	tutorial. (later) Done with the tutorial porting.
 
 2002-10-15 carol <carol@gimp.org>
 
