--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-17 scizzo <scizzo@gimp.org>
+
+	* tutorials/index.html: Gnome Icons now added to the list.
+
 2002-10-16 carol <carol@gimp.org>
 
     * resources/brushes/index.html and mgo-brushes.py: divided the brush
