Modified ChangeLog. Name change.
Modified ChangeLog.
Name change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-10-17 scizzo <scizzo@gimp.org>
 
 	* tutorials/index.html: Gnome Icons now added to the list.
+	Name change.
 
 2002-10-16 carol <carol@gimp.org>
 
